--- a/ruby-ext/extconf.rb.in
+++ b/ruby-ext/extconf.rb.in
@@ -1,7 +1,6 @@
 #!@@MHC_RUBY_PATH@@
 # -*- ruby -*-
 
-require 'mkmf'
 
 ################################################################
 # crate make file.
@@ -10,7 +9,9 @@ $CFLAGS  = "@@MHC_CFLAGS@@"
 $CFLAGS += " -DNEW_NAMING " if '@@MHC_RUBY_VERSION@@' >= '010300'
 $LDFLAGS = "@@MHC_LDFLAGS@@"
 
-if '@@MHC_DISABLE_PALM@@' == ''
+if '@@MHC_PILOT_LINK_LIB@@' != '' and '@@MHC_PILOT_LINK_INC@@' != ''
+  require 'mkmf'
+
 #  CONFIG["LDSHARED"] = "LD_RUN_PATH=@@MHC_PILOT_LINK_LIB@@ " +
 #    CONFIG["LDSHARED"]
 
