--- a/ruby-ext/extconf.rb.in
+++ b/ruby-ext/extconf.rb.in
@@ -1,16 +1,16 @@
 #!@@MHC_RUBY_PATH@@
 # -*- ruby -*-
 
-require 'mkmf'
-
 ################################################################
-# crate make file.
-
-$CFLAGS  = "@@MHC_CFLAGS@@"
-$CFLAGS += " -DNEW_NAMING " if '@@MHC_RUBY_VERSION@@' >= '010300'
-$LDFLAGS = "@@MHC_LDFLAGS@@"
+# create make file.
 
 if '@@MHC_PILOT_LINK_LIB@@' != '' and '@@MHC_PILOT_LINK_INC@@' != ''
+  require 'mkmf'
+
+  $CFLAGS  = "@@MHC_CFLAGS@@"
+  $CFLAGS += " -DNEW_NAMING " if '@@MHC_RUBY_VERSION@@' >= '010300'
+  $LDFLAGS = "@@MHC_LDFLAGS@@"
+
 #  CONFIG["LDSHARED"] = "LD_RUN_PATH=@@MHC_PILOT_LINK_LIB@@ " +
 #    CONFIG["LDSHARED"]
 
