Add Ruby-related ignorable files

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,24 @@
 *.elc
+*.gem
+*.rbc
+.DS_Store
+.bundle
+.config
+.yardoc
+Gemfile.lock
+InstalledFiles
+_yardoc
+attic/
+coverage
+doc/
+lib/bundler/man
+pkg
+rdoc
+spec/reports
+test/tmp
+test/version_tmp
+tmp
+vendor/bundle
+.ruby-version
+.ruby-gemset
+.rvmrc
