--- a/ruby-ext/extconf.rb.in
+++ b/ruby-ext/extconf.rb.in
@@ -1,4 +1,4 @@
-#!@@MHC_RUBY_PATH@@
+#!/usr/bin/env ruby
 # -*- ruby -*-
 
 ################################################################
@@ -21,7 +21,7 @@ else
   print "creating make.rb\n"
   mfile = open("make.rb", "w")
   mfile .print <<EOMK
-#!@@MHC_RUBY_PATH@@
+#!/usr/bin/env ruby
 #------------------------------------------------------
 
 $LOAD_PATH .unshift('@@MHC_TOPDIR@@')
