Add example of TZID setting in config.yml

--- a/samples/DOT.mhc-config.yml
+++ b/samples/DOT.mhc-config.yml
@@ -33,6 +33,11 @@
 #
 ---
 ################################################################
+GENERAL:
+################################################################
+  TZID: "Asia/Tokyo"
+
+################################################################
 SYNC_CHANNELS:
 ################################################################
 
